tests/compError/notLeakingAlias.ucl
// compError
// error: alias 'x' does not exist
// line:6 -> here

b = @y(__builtin:Number)
	x

a = @x(__builtin:Number)
	b 1